--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
             "outputMode": "server",
             "ssr": {
               "entry": "src/server.ts"
-            }
+            },
+            "baseHref": "/longobardi-2025/"
           },
           "configurations": {
             "production": {
