--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,8 @@ jobs:
         run: npm ci
 
       - name: Build Angular SSR
-        run: npm run build -- --configuration production --base-href /
+        run: |
+          npm run build -- --configuration production --base-href /
 
       - name: Deploy to DigitalOcean
         env:
@@ -31,6 +32,6 @@ jobs:
         run: |
           echo "$SSH_PRIVATE_KEY" > private_key && chmod 600 private_key
           ssh -i private_key -o StrictHostKeyChecking=no root@$DROPLET_IP "rm -rf /var/www/longobardi/*"
-          rsync -avz -e "ssh -i private_key -o StrictHostKeyChecking=no" dist/longobardi/browser/ root@$DROPLET_IP:/var/www/longobardi/
+          rsync -avz -e "ssh -i private_key -o StrictHostKeyChecking=no" dist/longobardi/ root@$DROPLET_IP:/var/www/longobardi/
           ssh -i private_key -o StrictHostKeyChecking=no root@$DROPLET_IP "systemctl restart nginx"
           rm -f private_key  # Clean up private key
