--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,4 +33,4 @@ jobs:
           ssh -i private_key -o StrictHostKeyChecking=no root@$DROPLET_IP "rm -rf /var/www/longobardi/*"
           rsync -avz -e "ssh -i private_key -o StrictHostKeyChecking=no" dist/longobardi/ root@$DROPLET_IP:/var/www/longobardi/
           ssh -i private_key -o StrictHostKeyChecking=no root@$DROPLET_IP "systemctl restart nginx"
-          rm -f private_key  # Clean up private key
+          rm -f private_key  # Clean up private key after deployment
