--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/ssr": "^20.0.2",
     "dotenv": "^17.1.0",
     "express": "^5.1.0",
+    "nodemailer": "^7.0.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
